--- a/templates/add_step.html
+++ b/templates/add_step.html
@@ -15,7 +15,9 @@
     <div>
         <form method="POST">
             <input type="text" name="step">
-            <button type="submit" class="newstep"> Add </button>
+            
+            
+            <button class="btn waves-effect waves-light orange" type="submit" > Add </button>
         </form>
 
 
