--- a/templates/goals.html
+++ b/templates/goals.html
@@ -4,7 +4,13 @@
     <h3>{{ category }} </h3>
     <div class="center">
         <h5>View individual goals by selecting their category below </h5>
-    </div> <a href="/add_goal"><button class="newgoal">  <i class="fas fa-plus-circle"></i></i> GOAL </button> </a>
+    </div>
+
+
+ <a class="btn waves-effect waves-light orange newgoal" href="/add_goal"><i class="fas fa-plus-circle"></i>ADD NEW GOAL</a>
+
+
+    <!--<a href="/add_goal"><button class="newgoal">  <i class="fas fa-plus-circle"></i></i> ADD NEW GOAL </button> </a>-->
     <div class="col s12 center">
 
 
