--- a/templates/overview.html
+++ b/templates/overview.html
@@ -2,15 +2,34 @@
 
 <div class="goal_img"></div>
 
+</div>
+<div class="row get_started">
+ 
+        <ul class="collapsible test">
+            <li>
+                <div class="collapsible-header">Get Started Today!</div>
+                <div class="collapsible-body"><span>Simply select “Goals” in the “New Users” section to add your first goal today!  <p></p>Goals are divided into different categories to help you manage them. If  you want a category that isn’t already listed, simply add a new category from the “Add Category” section. This category will then be available for you to add goals to. <p></p> Once you have started adding goals, you can check your progress anytime in the “Existing Users” section. You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by selecting your goals and choosing to “Add Step”.<p></p> Good Luck!</span></div>
+            </li>
+        </ul>
+
+</div>
 
 <div class="row arrow tagline">
     <div class="col s2"></div>
     <div class="col s8"><b>Goal Keeper</b> helps make the process of setting and tracking your goals simple. Create plans, track progress, get results!
         <p>Why use Goal Keeper? <br>
             <a href='#reasons'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
+
     </div>
     <div class="col s2"></div>
 </div>
+
+
+
+
+
+
+
 
 
 
@@ -45,7 +64,6 @@
     <p>Check your progress below!<br>
         <a href='#goals'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
 </div>
-
 
 
 
