--- a/templates/add_goal.html
+++ b/templates/add_goal.html
@@ -1,52 +1,56 @@
 {% extends 'base.html' %} {% block content %}
+<div class="categories_img"></div>
 
 
-<div class="inprogress">
-    <h3>Add Goal</h3>
-</div>
-<div class="goal_form">
-    <div class="row">
-        <form method="POST" class="col s12" enctype='multipart/form-data'>
+<div class="row add_goal_form">
+    <div class="col s12">
+        <div class="goal_form">
             <div class="row">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">poll</i>
-                        <select id="category" name="category_name">
+
+                <h3>Add Goal</h3>
+                <form method="POST" class="col s12" enctype='multipart/form-data'>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">poll</i>
+                            <select id="category" name="category_name">
                   <option value="" disabled selected>Choose Category</option>
                   {% for cat in categories %}
                       <option value="{{cat.category_name}}">{{cat.category_name}}</option>
                   {% endfor %}
                 </select>
-                        <label>Goal Category</label>
-                    </div>
-                </div>
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">assignment</i>
-                    <input id="goal_name" name="goal_name" type="text">
-                    <label for="icon_prefix">Goal Name</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">subject</i>
-                    <textarea name="goal_reasons" id="goal_reasons" class="materialize-textarea"></textarea>
-                    <label for="icon_telephone">Goal Reasons</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">today</i>
-                    <input id="due_date" name="due_date" type="text" class="datepicker">
-                    <label for="icon_prefix">Due Date</label>
-                </div>
-            </div>
-            <div class="row">
-                <button class="new_goal_button_on_form"><type="submit">Add Goal
-                <i class="material-icons right">playlist_add</i>
+                            <label>Goal Category</label>
+                        </div>
+
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">assignment</i>
+                            <input id="goal_name" name="goal_name" type="text">
+                            <label for="icon_prefix">Goal Name</label>
+                        </div>
+
+
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">subject</i>
+                            <textarea name="goal_reasons" id="goal_reasons" class="materialize-textarea"></textarea>
+                            <label for="icon_telephone">Goal Reasons</label>
+                        </div>
+
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">today</i>
+                            <input id="due_date" name="due_date" type="text" class="datepicker">
+                            <label for="icon_prefix">Due Date</label>
+                        </div>
+
+                        <div class="col s12">
+                     
+<button class="btn waves-effect waves-light orange new_goal_button_on_form"><type="submit">Add Goal<i class="material-icons right">playlist_add</i>
              </button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 </div>
-
+</div>
 {% endblock %}
