--- a/templates/base.html
+++ b/templates/base.html
@@ -17,17 +17,62 @@
 
 <body>
     <header>
+
         <div class="navbar-fixed">
+
+
+
+
+
+            <ul id="dropdown1" class="dropdown-content">
+                <li><a href="{{ url_for('get_goals') }}">Goals</a></li>
+                <li><a href="/categories">Add Category</a></li>
+                <li><a href="#goals">Check your progress</a></li>
+            </ul>
+
+            <ul id="dropdown2" class="dropdown-content">
+                <li><a href="{{ url_for('get_goals') }}">Goals</a></li>
+                <li><a href="/categories">Add Category</a></li>
+            </ul>
+
+
             <nav>
+
+
                 <div class="nav-wrapper">
                     <a class="logo hide-on-small-only" href="{{ url_for('overview_page') }}"> Goal Keeper </a>
+
+
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+
+                    
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
 
-                        <li><a class="nav-font" href="{{ url_for('get_goals') }}">Get Started</a></li>
-                        <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
-                        <li><a class="nav-font" href="/categories">Add Category</a></li>
+
+
+
+
+
+                        <li>
+                            <a class="nav-font">
+                                 
+                            </a>
+                        </li>
+                        <!--<li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>-->
+                        <!--<li><a class="nav-font" href="/categories">Add Category</a></li>-->
+
+
+
+
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown2">New Users<i class="material-icons right">arrow_drop_down</i></a></li>
+
+
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Existing Users<i class="material-icons right">arrow_drop_down</i></a></li>
                     </ul>
+
+            
+                    
                     <ul class="side-nav" id="mobile-demo">
 
                         <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
@@ -43,14 +88,16 @@
         {% block content %} {% endblock %}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
             $(".button-collapse").sideNav();
+            $(".dropdown-button").dropdown();
         });
 
         $('.datepicker').pickadate({
@@ -67,6 +114,8 @@
 
         $('.modal').modal();
     </script>
+
+
 </body>
 
 </html>
