--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
     <title>Document</title>
 </head>
@@ -49,17 +50,7 @@
                     
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
 
-
-
-
-
-
-                        <li>
-                            <a class="nav-font">
-                                 
-                            </a>
-                        </li>
-                        <!--<li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>-->
+                        <li><a class="nav-font" href="{{ url_for('progress_page') }}">Check your progress</a></li>
                         <!--<li><a class="nav-font" href="/categories">Add Category</a></li>-->
 
 
