--- a/templates/overview.html
+++ b/templates/overview.html
@@ -2,17 +2,7 @@
 
 <div class="goal_img"></div>
 
-</div>
-<div class="row get_started">
- 
-        <ul class="collapsible test">
-            <li>
-                <div class="collapsible-header">Get Started Today!</div>
-                <div class="collapsible-body"><span>Simply select “Goals” in the “New Users” section to add your first goal today!  <p></p>Goals are divided into different categories to help you manage them. If  you want a category that isn’t already listed, simply add a new category from the “Add Category” section. This category will then be available for you to add goals to. <p></p> Once you have started adding goals, you can check your progress anytime in the “Existing Users” section. You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by selecting your goals and choosing to “Add Step”.<p></p> Good Luck!</span></div>
-            </li>
-        </ul>
 
-</div>
 
 <div class="row arrow tagline">
     <div class="col s2"></div>
@@ -23,13 +13,6 @@
     </div>
     <div class="col s2"></div>
 </div>
-
-
-
-
-
-
-
 
 
 
@@ -61,86 +44,56 @@
 
 <div class="row center">
 
-    <p>Check your progress below!<br>
-        <a href='#goals'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
+
+    <p>Get Started Today!<br>
+        <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
 </div>
 
 
+<div class="row" id="get_started">
 
 
+    <div class="heading">Get Started Today</div>
+    
+    
 
+    <div class="col s3 reasons_for_goal_getter blue">
+        <div class="number"> 1 </div>
 
+        <div class="reasons_paragraph"> <b>Goals</b> <br>Simply select “Goals” in the nav bar to add your first goal today! </div>
+        <div class="arrow2">&#8595;</div>
 
-<div class="row" id="goals">
-
-    <div class="row heading">Your Progress</div>
-    <div class="col s2"></div>
-    <div class="col s4">
-
-        <img src="{{ url_for('static', filename='images/in_progress.jpg')}}">
-        <div class="goal_name">Current goals</div>
-
-
-        {% for goal in unfinished %}
-
-        <dl>
-            <dt><a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal"><b>{{ goal.goal_name }}</b></a></dt>
-            <dd> {{ goal.status }}!</dd>
-            <dd> Mark a step complete<a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="link"> here</a></dd>
-        </dl>
-        {%endfor%}
     </div>
 
-    <div class="col s4">
-        <img src="{{ url_for('static', filename='images/complete.jpg')}}">
-        <div class="goal_name">Completed goals</div>
+    <div class="col s3 reasons_for_goal_getter red">
+        <div class="number"> 2 </div>
 
-        {% for goal in finished %}
-
-        <ul>
-            <li><a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal"><b>{{ goal.goal_name }}</a></b>
-            </li>
-        </ul> {%endfor%}
-
+        <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want a category that isn’t already listed, simply add a new category from the “Add Category” section. This category will then be available for
+            you to add goals to. </div>
+            <div class="arrow2">&#8595;</div>
     </div>
-    <div class="col s2"></div>
+
+    <div class="col s3 reasons_for_goal_getter green">
+
+        <div class="number"> 3 </div>
+        <div class="reasons_paragraph"> <b>Add Steps</b> <br>You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by selecting your individual goals and choosing to “Add Step”. </div>
+        <div class="arrow2">&#8595;</div>
+    </div>
+
+    <div class="col s3 reasons_for_goal_getter yellow">
+        <div class="number"> 4 </div>
+
+        <div class="reasons_paragraph"> <b>Check your Progress </b> <br>Once you have started adding goals, you can check your progress anytime by selecting “Check your Progress” section. </div> <div class="arrow2">&#8595;</div>
+    </div>
+
 </div>
 </div>
 
 
 
-<!--<div class="row tagline_position">-->
-<!--    <div class="col s4"></div>-->
-<!--    <div class="col s8">-->
-<!--        <div><i>Great plans made. Great things achieved.</i><br>Simply record your goals in the goal section and track your progress below.</div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="row overview_position">-->
-<!--    <div class="col s4"></div>-->
-<!--    <div class="col s4 inprogress_goals">-->
-<!--        <div class="goal_name">Current goals</div>-->
-<!--        <hr> {% for goal in unfinished %}-->
 
-<!--        <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal">{{ goal.goal_name }}</a>-->
 
-<!--        <div class="goal_descritpion">-->
-<!--            <b> {{ goal.status }}!</b>-->
-<!--            <br> Mark a step complete<a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="link">here</a>-->
-<!--            <hr>-->
-<!--        </div>-->
-<!--        {%endfor%}-->
-<!--    </div>-->
-<!--    <div class="col s4 inprogress_goals">-->
-<!--        <div class="goal_name">Completed goals</div>-->
 
-<!--        {% for goal in finished %}-->
 
-<!--        <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal"> {{goal.goal_name}}-->
-
-<!--</a><img src="{{ url_for('static', filename='images/donesymbol.png')}}">-->
-<!--        <hr> {%endfor%}-->
-
-<!--    </div>-->
-<!--</div>-->
 
 {% endblock %}
