--- a/templates/overview.html
+++ b/templates/overview.html
@@ -3,6 +3,14 @@
 <div class="goal_img"></div>
 
 
+<a href="#get_started" class="waves-effect waves-light white get_started_today"> <b>GET STARTED TODAY!</b></a>
+
+<!--<a href='#get_started'>-->
+<!--    <div class="get_started_today">-->
+<!--       GET STARTED TODAY!-->
+<!--    </div>-->
+<!--</a>-->
+
 
 <div class="row arrow tagline">
     <div class="col s2"></div>
@@ -40,28 +48,33 @@
 
         <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>
     </div>
+    <div class="row center">
+        <div class="row"></div>
+
+        <p>Get Started Today<br>
+            <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
+    </div>
+
 </div>
 
-<div class="row center">
 
 
-    <p>Get Started Today!<br>
-        <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
-</div>
 
 
 <div class="row" id="get_started">
 
 
-    <div class="heading">Get Started Today</div>
-    
-    
+    <div class="heading">Get Started Today
+        <div class="arrow2">&#8675;</div>
+    </div>
+
+
 
     <div class="col s3 reasons_for_goal_getter blue">
         <div class="number"> 1 </div>
 
         <div class="reasons_paragraph"> <b>Goals</b> <br>Simply select “Goals” in the nav bar to add your first goal today! </div>
-        <div class="arrow2">&#8595;</div>
+
 
     </div>
 
@@ -70,24 +83,25 @@
 
         <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want a category that isn’t already listed, simply add a new category from the “Add Category” section. This category will then be available for
             you to add goals to. </div>
-            <div class="arrow2">&#8595;</div>
+
     </div>
 
     <div class="col s3 reasons_for_goal_getter green">
 
         <div class="number"> 3 </div>
         <div class="reasons_paragraph"> <b>Add Steps</b> <br>You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by selecting your individual goals and choosing to “Add Step”. </div>
-        <div class="arrow2">&#8595;</div>
+
     </div>
 
     <div class="col s3 reasons_for_goal_getter yellow">
         <div class="number"> 4 </div>
 
-        <div class="reasons_paragraph"> <b>Check your Progress </b> <br>Once you have started adding goals, you can check your progress anytime by selecting “Check your Progress” section. </div> <div class="arrow2">&#8595;</div>
+        <div class="reasons_paragraph"> <b>Check your Progress </b> <br>Once you have started adding goals, you can check your progress anytime by selecting “Check your Progress” section. </div>
     </div>
 
 </div>
 </div>
+
 
 
 
